--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,7 @@ FROM alpine
 RUN mkdir /www
 WORKDIR /www
 COPY requirements.txt /www/
+COPY testing.txt /www/
 
 # setup
 RUN apk update
@@ -16,7 +17,7 @@ RUN apk --no-cache add \
     build-base \
     gettext
 RUN pip3 install --upgrade pip
-RUN pip3 install -r requirements.txt
+RUN pip3 install -r testing.txt
 
 # clean
 RUN apk del -r python3-dev postgresql
